--- a/index.html
+++ b/index.html
@@ -35,30 +35,25 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                        Juegos
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Demon Souls</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Dark Souls</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Dark Souls II</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#">Dark Souls III</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Bloodborne</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
