--- a/index.html
+++ b/index.html
@@ -66,7 +66,53 @@
                         <h1>Doritos Souls</h1>
                         <p>Una guía de la saga Souls en español.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        body{
+    background: #d0d9d4;
+    padding-top: 10%;
+    text-align: center;
+}
+.boton{
+    /* estilos para la tipografia del botón*/
+ 
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 15px 25px;
+    margin-right: 30px;
+    cursor: pointer;
+    border: 0;
+    border-radius: 30px;
+ 
+    /* propiedades para la animacion del boton */
+ 
+    transition: all 0.20s linear;
+    -webkit-transition: all 0.20s linear;
+    -moz-transition: all 0.20s linear;
+    position: relative;
+    bottom: 0;
+}
+ 
+.rojo{
+    /* Estilos para el fondo del boton */
+    background: #bf1b04;
+    box-shadow: 0px 5px 0 #8F1502;            
+}
+.boton:active{
+    /* Posicion del boton al clickearlo */
+    bottom: -5px;
+}
+ 
+.rojo:active{
+    /* Sombra del boton al clickearlo */
+    box-shadow:0 0 0 #9a1604, inset 0 0 5px #000000;            
+ 
+}
+</style>
+</head>
+ 
+<body>
+<a>Click Aquí</a>
                     </div>
                 </div>
             </div>
