--- a/index.html
+++ b/index.html
@@ -66,29 +66,7 @@
                         <h1>Doritos Souls</h1>
                         <p>Una guía de la saga Souls en español.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                       <html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<div class="container">
-  <h2>Button</h2>
-  <p>The .active class makes the button appear pressed:</p>            
-  <button type="button" class="btn btn-default">Default button</button>      
-  <button type="button" class="btn btn-default active">Active default button</button>
-  <br><br>
-  <button type="button" class="btn btn-info">Info button</button>      
-  <button type="button" class="btn btn-info active">Active info button</button>
-</div>
-
-</body>
-</html>
+                        <a href="#menu-toggle" class="btn btn-danger" id="menu-toggle">Índice</a>
 
                     </div>
                 </div>
