--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
                         <h1>Doritos Souls</h1>
                         <p>Una guía de la saga Souls en español.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                        <!-- Botton -->
                         <a href="#menu-toggle" class="btn btn-danger" id="menu-toggle">Índice</a>
+                        
+           <!-- Put image -->             
+           <body>
+           <div class="container">
+           <h2>Image</h2>            
+           <img src="darksouls.jpg" class="img-rounded" alt="Dark Souls" width="304" height="236"> 
+           </div>
+           </body>
 
                     </div>
                 </div>
