--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            <body>
            <div class="container">
            <h2>Image</h2>            
-           <img src="darksouls.jpg" class="img-rounded" alt="Dark Souls" width="304" height="236"> 
+           <img src="darksouls" class="img-rounded" alt="Dark Souls" width="304" height="236"> 
            </div>
            </body>
 
