--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 </li>
                 <li>
                     <a href="#">Demon Souls</a>
+                     <span class="caret"></span></button>
+                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Items</a></li>
                 </li>
                 <li>
                     <a href="#">Dark Souls</a>
