--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <body>
 
 <h3>Who Am I?</h3>
-<img src="bird.jpg" alt="Bird">
+<img src="demon.png" alt="Demon">
 <h3>I'm an adventurer</h3>
 
 </body>
