--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 </head>
 <body>
 
-<h3>Who Am I?</h3>
-<img src="demon.png" alt="Demon">
-<h3>I'm an adventurer</h3>
+<h1>Who Am I?</h1>
+<img src="demon.png">
+<h2>I'm an adventurer</h2>
 
 </body>
                         
