--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         
 <body>
 <h1>Quien soy?</h1>
-<img src="oscar.png" class="img-circle" alt="Oscar de Astora" width="200" height="200">
+<img src="oscar.jpg" class="img-circle" alt="Oscar de Astora" width="200" height="200">
 <h2>Soy un aventurero</h2>
 </body>
                         
