--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
                         <!-- Botton -->
                         <a href="#menu-toggle" class="btn btn-danger" id="menu-toggle">Índice</a>
-                        
-                        <head>
+              <!-- Create an image -->      
+<head>
   <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
