--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
                         Juegos
                     </a>
                 </li>
-                <li>
-                    <a href="#">Demon Souls</a>
-                </li>
+                <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Inicio</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Demon Souls <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#"> Guía </a></li>
+            <li><a href="#"> Objetos </a></li>
+            <li><a href="#"> Armas </a></li>
+          </ul>
                 <li>
                     <a href="#">Dark Souls</a>
                 </li>
