--- a/index.html
+++ b/index.html
@@ -48,19 +48,17 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Demon Souls <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><a href="#"> Guía </a></li>
+            <li><a href="#"> Objetos </a></li>
+            <li><a href="#"> Jefes </a></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"> Dark Souls </a></li>
+        <li><a href="#"> Dark Souls II </a></li>
+        <li><a href="#"> Dark Souls III </a></li>
+        <li><a href="#"> Bloodborne </a></li>
       </ul>
     </div>
   </div>
@@ -72,11 +70,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Doritos Souls</h1>
                         <p>Una guía de la saga Souls en español.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <!-- Botton -->
-                        <a href="#menu-toggle" class="btn btn-danger" id="menu-toggle">Índice</a>
+                        
               <!-- Create an image -->      
 <head>
   <title>Bootstrap Theme Simply Me</title>
