--- a/index.html
+++ b/index.html
@@ -42,20 +42,28 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="https://jolivera73.github.io/doritos-souls/#">Doritos Souls</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Demon Souls <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Demon Souls <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#"> Guía </a></li>
             <li><a href="#"> Objetos </a></li>
-            <li><a href="#"> Jefes </a></li>
+            <li><a href="#"> Armas </a></li>
           </ul>
         </li>
-        <li><a href="#"> Dark Souls </a></li>
+          
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Dark Souls <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#"> Guía </a></li>
+            <li><a href="#"> Objetos </a></li>
+            <li><a href="#"> Armas </a></li>
+          </ul>
+        </li>
+          
         <li><a href="#"> Dark Souls II </a></li>
         <li><a href="#"> Dark Souls III </a></li>
         <li><a href="#"> Bloodborne </a></li>
