--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
       <a class="navbar-brand" href="https://jolivera73.github.io/doritos-souls/#">Doritos Souls</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
+       <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Inicio</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Demon Souls <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Demon's Souls <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#"> Guía </a></li>
             <li><a href="#"> Objetos </a></li>
