--- a/index.html
+++ b/index.html
@@ -46,25 +46,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
        <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Inicio</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Demon's Souls <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#"> Guía </a></li>
-            <li><a href="#"> Objetos </a></li>
-            <li><a href="#"> Armas </a></li>
-          </ul>
-        </li>
-          
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#"> Dark Souls <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#"> Guía </a></li>
-            <li><a href="#"> Objetos </a></li>
-            <li><a href="#"> Armas </a></li>
-          </ul>
-        </li>
-          
+        <li><a href="#"> Demon Souls </a></li>
+        <li><a href="#"> Dark Souls </a></li>
         <li><a href="#"> Dark Souls II </a></li>
         <li><a href="#"> Dark Souls III </a></li>
         <li><a href="#"> Bloodborne </a></li>
