--- a/index.html
+++ b/index.html
@@ -77,18 +77,51 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
  <div class="container"></div>
-                        
+                   
+     <!-- Página inicial -->
+<head>
 <body>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <body>
-  <div class="jumbotron">
-    <h1>Quien soy?</h1>   
-      <img src="laton.jpg" class="img-circle" alt="Latón Armour" width="250" height="250">
- <p>Soy un aventurero.</p>
-  </div> 
-</body>  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  .bg-1 { 
+      background-color: #1abc9c; /* Green */
+      color: #ffffff;
+  }
+  .bg-2 { 
+      background-color: #474e5d; /* Dark Blue */
+      color: #ffffff;
+  }
+  .bg-3 { 
+      background-color: #fff; /* White */
+      color: #555555;
+  }
+  </style>
+</head>
+<body>
+
+<div class="container-fluid bg-1 text-center">
+  <h3>Quien soy?</h3>
+  <img src="laton.jpg" class="img-circle" alt="latón warrior" width="250" height="250">
+  <h3>Soy un jugador</h3>
+</div>
+
+<div class="container-fluid bg-2 text-center">
+  <h3>Guías</h3>
+  <p>Las siguientes guías que habrá serán de: Demon's Souls, Dark Souls/II/III y Bloodborne (toda la saga souls).</p>
+</div>
+
+<div class="container-fluid bg-3 text-center">
+  <h3>Recuerda que...</h3>
+  <p>Esta página web está hecha con el fin de entretenerme.</p>
+</div>
+
+</body>y>  
 </body>
 
                     </div>
