--- a/index.html
+++ b/index.html
@@ -57,16 +57,7 @@
   </div>
 </nav>
 </body>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p>Una guía de la saga Souls en español.</p>
-                        
-              <!-- Create an image -->      
+        <!-- /#sidebar-wrapper -->    
 <head>
   <title>Bootstrap Theme Simply Me</title>
   <meta charset="utf-8">
@@ -113,7 +104,7 @@
 
 <div class="container-fluid bg-2 text-center">
   <h3>Guías</h3>
-  <p>Las siguientes guías que habrá serán de: Demon's Souls, Dark Souls/II/III y Bloodborne (toda la saga souls).</p>
+  <p>Las siguientes guías que habrá serán de: Demon's Souls, Dark Souls/II/III y Bloodborne (toda la saga souls) en español.</p>
 </div>
 
 <div class="container-fluid bg-3 text-center">
