--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <p>Esta página web está hecha con el fin de entretenerme.</p>
 </div>
 
-</body>y>  
+</body> 
 </body>
 
                     </div>
