--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style>
   .bg-1 { 
-      background-color: #1abc9c; /* Green */
+      background-color: #BD1A25; /* Green */
       color: #ffffff;
   }
   .bg-2 { 
-      background-color: #474e5d; /* Dark Blue */
+      background-color: #292C33; /* Dark Blue */
       color: #ffffff;
   }
   .bg-3 { 
-      background-color: #fff; /* White */
-      color: #555555;
+      background-color: #515866; /* White */
+      color: #ffffff;
   }
   </style>
 </head>
