--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@
  <div class="container"></div>
                    
      <!-- Página inicial -->
+    <style>
+  .jumbotron {
+      background-color: #640C0C;
+      color: #fff;
+  }
+  </style>
+</head>
+<body>
+
+<div class="jumbotron text-center">
+  <h1>Doritos Souls</h1> 
+  <p>Una guía de la saga Souls</p> 
+</div>
+
+</body>
+    
 <head>
 <body>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
