--- a/index.html
+++ b/index.html
@@ -70,71 +70,19 @@
  <div class="container"></div>
                    
      <!-- Página inicial -->
-    <style>
-  .jumbotron {
-      background-color: #640C0C;
-      color: #fff;
-  }
-  </style>
-</head>
-<body>
-
-<div class="jumbotron text-center">
-  <h1>Doritos Souls</h1> 
-  <p>Una guía de la saga Souls</p> 
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="..." alt="Doritos Souls">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="..." alt="Una guía de la saga Souls">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="..." alt="Quien soy?">
+    </div>
+  </div>
 </div>
-
-</body>
-    
-<head>
-<body>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<body>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-  .bg-1 { 
-      background-color: #BD1A25; /* Green */
-      color: #ffffff;
-  }
-  .bg-2 { 
-      background-color: #292C33; /* Dark Blue */
-      color: #ffffff;
-  }
-  .bg-3 { 
-      background-color: #515866; /* White */
-      color: #ffffff;
-  }
-  </style>
-</head>
-<body>
-
-<div class="container-fluid bg-1 text-center">
-  <h3>Quien soy?</h3>
-  <img src="laton.jpg" class="img-circle" alt="latón warrior" width="250" height="250">
-  <h3>Soy un jugador</h3>
-</div>
-
-<div class="container-fluid bg-2 text-center">
-  <h3>Guías</h3>
-  <p>Las siguientes guías que habrá serán de: Demon's Souls, Dark Souls/II/III y Bloodborne (toda la saga souls) en español.</p>
-</div>
-
-<div class="container-fluid bg-3 text-center">
-  <h3>Recuerda que...</h3>
-  <p>Esta página web está hecha con el fin de entretenerme.</p>
-</div>
-
-</body> 
-</body>
-
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- /#page-content-wrapper -->
 
     </div>
