--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="..." alt="Doritos Souls">
+      <img class="d-block img-fluid" src="laton.jpg" alt="Doritos Souls">
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Una guía de la saga Souls">
+      <img class="d-block img-fluid" src="laton.jpg" alt="Una guía de la saga Souls">
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="..." alt="Quien soy?">
+      <img class="d-block img-fluid" src="laton.jpg" alt="Quien soy?">
     </div>
   </div>
 </div>
