--- a/index.html
+++ b/index.html
@@ -87,26 +87,26 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="ny.jpg" alt="New York" width="1200" height="700">
+        <img src="laton.jpg" alt="Doritos Souls" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
+          <h3>Doritos Souls</h3>
+          <p>Una guía de la saga Souls.</p>
         </div>      
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
+        <img src="laton.jpg" alt="Quien soy" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3>Quien soy?</h3>
+          <p>Soy un jugador, al igual que tú.</p>
         </div>      
       </div>
     
       <div class="item">
-        <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
+        <img src="laton.jpg" alt="Recuerda" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+          <h3>Recuerda que...</h3>
+          <p>Esta página la he creado con el fin de entretenerme.</p>
         </div>      
       </div>
     </div>
