--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="laton.jpg" alt="Doritos Souls" width="1200" height="700">
+        <img src="oscar.jpg" alt="Doritos Souls" width="1200" height="700">
         <div class="carousel-caption">
           <h3>Doritos Souls</h3>
           <p>Una guía de la saga Souls.</p>
@@ -95,7 +95,7 @@
       </div>
 
       <div class="item">
-        <img src="laton.jpg" alt="Quien soy" width="1200" height="700">
+        <img src="oscar.jpg" alt="Quien soy" width="1200" height="700">
         <div class="carousel-caption">
           <h3>Quien soy?</h3>
           <p>Soy un jugador, al igual que tú.</p>
@@ -103,7 +103,7 @@
       </div>
     
       <div class="item">
-        <img src="laton.jpg" alt="Recuerda" width="1200" height="700">
+        <img src="oscar.jpg" alt="Recuerda" width="1200" height="700">
         <div class="carousel-caption">
           <h3>Recuerda que...</h3>
           <p>Esta página la he creado con el fin de entretenerme.</p>
