--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 </nav>
 </body>
-        <!-- /#sidebar-wrapper -->    
+        <!-- Imagen Inicio -->    
 <style>
   .container {
       padding: 80px 120px;
@@ -121,6 +121,22 @@
       <span class="sr-only">Next</span>
     </a>
 </div>
+    </body>
+    
+    <!-- Información -->
+    <body>
+
+<div class="container">
+  <h2>Typography</h2>
+  <p>Use the address element to present contact information:</p>
+  <address>
+    <strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong><br> 
+    Example.com<br>
+    Santuario de enlace de fuego nº83 1r 2nd<br>
+    Lordran
+  </address>
+</div>
+
 </body>
         <!-- /#page-content-wrapper -->
 
