--- a/index.html
+++ b/index.html
@@ -127,13 +127,8 @@
     <body>
 
 <div class="container">
-  <h2>Typography</h2>
-  <p>Use the address element to present contact information:</p>
   <address>
-    <strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong><br> 
-    Example.com<br>
-    Santuario de enlace de fuego nº83 1r 2nd<br>
-    Lordran
+    <strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong><br> Santuario de enlace de fuego nº83 1r 2nd<br>Lordran
   </address>
 </div>
 
