--- a/index.html
+++ b/index.html
@@ -128,8 +128,14 @@
 
 <div class="container">
   <address>
+      
     <strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong><br> Santuario de enlace de fuego nº83 1r 2nd<br>Lordran
   </address>
+    <ul class="list-inline">
+    <li><strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong></li>
+    <li>Santuario de enlace de fuego nº83 1r 2nd</li>
+    <li>Lordran</li>
+  </ul>
 </div>
 
 </body>
