--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
     
     <!-- Información -->
     <body>
-
-<div class="container">
-  <address>
-      
-    <strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong><br> Santuario de enlace de fuego nº83 1r 2nd<br>Lordran
-  </address>
+<style>
+.bg-25 { 
+    background-color: #474e5d; /* Color */
+    color: #ffffff;
+}
+</style>
+<div class="container-fluid bg-25 text-center">
     <ul class="list-inline">
     <li><strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong></li>
     <li>Santuario de enlace de fuego nº83 1r 2nd</li>
