--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <body>
 <style>
 .bg-25 { 
-    background-color: #474e5d; /* Color */
+    background-color: #252933; /* Color */
     color: #ffffff;
 }
 </style>
