--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
 .bg-25 { 
     background-color: #403E26; /* Color */
     color: #ffffff;
+    width: 80%;
+      height: 80%;
+      opacity: 0.7;
 }
 </style>
 <div class="container-fluid bg-25 text-center">
