--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 <div class="container-fluid bg-25 text-center">
     <ul class="list-inline">
     <li><strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong></li>
-    <li>Santuario de enlace de fuego nº83 1r 2nd</li>
-    <li>Lordran</li>
+    <li><u>Santuario de enlace de fuego nº83 1r 2nd</u></li>
+        <li><u>Lordran</u></li>
   </ul>
 </div>
 
