--- a/index.html
+++ b/index.html
@@ -34,16 +34,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
-    /* cambiar tipo de letra */
-nav.navbar ul.nav li {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
- 
-/* cambiar el color de fondo a la barra */
-nav.navbar {
-    background-color: #330000;
-}
+<nav class="navbar-default-color: #FF3333">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
