--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-<nav class="navbar-default-color: #FF3333">
+<nav class="navbar-default-bg: #FF3333">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
