--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
 
 <nav class="navbar navbar-inverse">
+    <div class="navbar-default-bg: #333">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
