--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+    
+<body>
+.navbar{
+        color: red;
+}
+    </body>
+    
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
