--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,45 +33,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
     
-<style>
-    #navigation {
-	width: 950px;
-	height: 50px;
-	margin: 0;
-	padding: 0;
-	background: url(images/navigation-bg.jpg) no-repeat left top;
-} 
-#navigation ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-} 
-#navigation ul li {
-	display: inline;
-	margin: 0px;
-} 
-#navigation ul li a {
-	height:33px;
-	display: block;
-	float: left;
-	padding: 17px 15px 0 15px;
-	font: bold 12px Arial;
-	color: #FFF;
-	text-decoration: none;
-	background: url(images/navigation-separator.png) no-repeat right center;
-} 
 
-#navigation ul li a:hover {
-	color:#3B3B3B;
-	background: url(images/navigation-hover.png) repeat-x left top;
-}
-
-#navigation ul li#active a {
-	color:#3B3B3B;
-	background: url(images/navigation-hover.png) repeat-x left top;
-}
-    </style>
-    
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
