--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
     </div>
   </div>
 </nav>
-</body>
         <!-- Imagen Inicio -->    
 <style>
   .container {
@@ -87,7 +86,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="knight.jpg" alt="Doritos Souls" width="1600" height="500">
+        <img src="deaddragon.jpg" alt="Doritos Souls" width="1600" height="700">
         <div class="carousel-caption">
           <h3>Doritos Souls</h3>
           <p>Una guía de la saga Souls.</p>
@@ -95,7 +94,7 @@
       </div>
 
       <div class="item">
-        <img src="knight.jpg" alt="Quien soy" width="1600" height="500">
+        <img src="deaddragon.jpg" alt="Quien soy" width="1600" height="700">
         <div class="carousel-caption">
           <h3>Quien soy?</h3>
           <p>Soy un jugador, al igual que tú.</p>
@@ -103,7 +102,7 @@
       </div>
     
       <div class="item">
-        <img src="knight.jpg" alt="Recuerda" width="1600" height="500">
+        <img src="deaddragon.jpg" alt="Recuerda" width="1600" height="700">
         <div class="carousel-caption">
           <h3>Recuerda que...</h3>
           <p>Esta página la he creado con el fin de entretenerme.</p>
@@ -143,7 +142,6 @@
 </body>
         <!-- /#page-content-wrapper -->
 
-    </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
