--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 			   <ul class="nav navbar-nav">
 				<li class="dropdown">
-				<li><a href="#"> Demon Souls </a></li>
+				<li><a href="daemon_souls.html"> Demon Souls </a></li>
 				<li><a href="#"> Dark Souls </a></li>
 				<li><a href="#"> Dark Souls II </a></li>
 				<li><a href="#"> Dark Souls III </a></li>
