--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			  </div>
 
 			  <div class="item">
-				<img src="image/IMG_205423.png" alt="Quien soy" width="1700" height="700">
+				<img src="image/knight.jpg" alt="Quien soy" width="1700" height="700">
 				<div class="carousel-caption">
 				  <h3>Quien soy?</h3>
 				  <p>Soy un jugador, al igual que tú.</p>
