--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
 			  <div class="item active">
-				<img src="knight.jpg" alt="Doritos Souls" width="1600" height="500">
+				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Doritos Souls</h3>
 				  <p>Una guía de la saga Souls.</p>
@@ -87,7 +87,7 @@
 			  </div>
 
 			  <div class="item">
-				<img src="image/knight.jpg" alt="Quien soy" width="1600" height="500">
+				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Quien soy?</h3>
 				  <p>Soy un jugador, al igual que tú.</p>
@@ -95,7 +95,7 @@
 			  </div>
 			
 			  <div class="item">
-				<img src="knight.jpg" alt="Recuerda" width="1700" height="700">
+				<img src="image/ringedcity.jpg" alt="Recuerda" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Recuerda que...</h3>
 				  <p>Esta página la he creado con el fin de entretenerme.</p>
