--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>    
 
 		<!-- NAVBAR -->
-		<nav class="navbar navbar-inverse">
+		<nav class="my-navbar navbar navbar-inverse">
 		  <div class="container-fluid">
 			<div class="navbar-header">
 			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
