--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <body>    
 
 		<!-- NAVBAR -->
-		<nav class="my-navbar navbar navbar-default">
-		  <div class="container">
+		<nav class="my-navbar navbar navbar-inverse">
+		  <div class="container-fluid">
 			<div class="navbar-header">
 			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 				<span class="icon-bar"></span>
