--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 			   <ul class="nav navbar-nav">
 				<li class="dropdown">
-				<li><a href="daemon_souls.html"> Demon Souls </a></li>
-				<li><a href="#"> Dark Souls </a></li>
-				<li><a href="#"> Dark Souls II </a></li>
-				<li><a href="#"> Dark Souls III </a></li>
-				<li><a href="#"> Bloodborne </a></li>
+				<li><a href="demon's_souls.html"> Demon Souls </a></li>
+				<li><a href="dark_souls.html"> Dark Souls </a></li>
+				<li><a href="dark_souls_ii.html"> Dark Souls II </a></li>
+				<li><a href="dark_souls_iii.html"> Dark Souls III </a></li>
+				<li><a href="bloodborne.htlm"> Bloodborne </a></li>
 			  </ul>
 			</div>
 		  </div>
