--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<li><a href="dark_souls.html"> Dark Souls </a></li>
 				<li><a href="dark_souls_ii.html"> Dark Souls II </a></li>
 				<li><a href="dark_souls_iii.html"> Dark Souls III </a></li>
-				<li><a href="bloodborne.htlm"> Bloodborne </a></li>
+				<li><a href="bloodborne.html"> Bloodborne </a></li>
 			  </ul>
 			</div>
 		  </div>
