--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
+    <link href="css/materialize.css" rel="stylesheet">	
+	
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
@@ -22,6 +24,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--<script src="js/jquery.js"></script>-->
     <script src="js/bootstrap.js"></script>
+	
+    <script src="js/materialize.js"></script>	
 	
 	<style>
 		  .container {
