--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery_321.js"></script>
     <!--<script src="js/jquery.js"></script>-->
     <script src="js/bootstrap.js"></script>
 	
