--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
 		  </ul>
 		</div>
 
+		<div class="row">
+			<h1 class="col-md-12">Títol</h1>
+			
+		</div>	
+	
 
 
 		<!-- Menu Toggle Script -->
