--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		</div>
 
 		<div class="row">
-			<h1 class="col-md-12">Títol</h1>
+			<h1 class="col-md-12 green accent-2">Títol</h1>
 			
 		</div>	
 	
