--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@
 		</div>	
 	
 
+		  <nav>
+		    <div class="nav-wrapper black white-text">
+		      <a href="#" class="brand-logo">Logo</a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+			<li><a href="sass.html">Sass</a></li>
+			<li><a href="badges.html">Components</a></li>
+			<li><a href="collapsible.html">JavaScript</a></li>
+		      </ul>
+		    </div>
+		  </nav>
+	
+	
 
 		<!-- Menu Toggle Script -->
 		<script>
