--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 			background-color: #403E26; /* Color */
 			color: #ffffff;
 			  opacity: 0.7;
+		}	  
+		  .navbar{
+		  background-image: url("image/knight.jpg");
+			  
 		}
 		  
 	</style>
@@ -136,7 +140,7 @@
 		</div>	
 	
 
-		  <nav>
+		  <nav class="navbar">
 		    <div class="nav-wrapper black white-text">
 		      <a href="#" class="brand-logo">Logo</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
