--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	
 
 		  <nav class="navbar">
-		    <div class="nav-wrapper black white-text">
+		    <div class="nav-wrapper">
 		      <a href="#" class="brand-logo">Logo</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li><a href="sass.html">Sass</a></li>
