--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 			background-color: #403E26; /* Color */
 			color: #ffffff;
 			  opacity: 0.7;
-		}	  
-		  .navbar{
-		  background-image: url("image/knight.jpg");
-			  
-		}
+		   }	  
+		  .menu1{
+		  	background-image: url("image/knight.jpg");  
+		    }
 		  
 	</style>
  
@@ -144,9 +143,9 @@
 		    <div class="nav-wrapper">
 		      <a href="#" class="brand-logo">Logo</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-			<li><a href="sass.html">Sass</a></li>
-			<li><a href="badges.html">Components</a></li>
-			<li><a href="collapsible.html">JavaScript</a></li>
+			<li class="menu1"><a href="sass.html">Sass</a></li>
+			<li class="menu2"><a href="badges.html">Components</a></li>
+			<li class="menu3"><a href="collapsible.html">JavaScript</a></li>
 		      </ul>
 		    </div>
 		  </nav>
