--- a/index.html
+++ b/index.html
@@ -158,6 +158,17 @@
 			e.preventDefault();
 			$("#wrapper").toggleClass("toggled");
 		});
+		
+		$(document).ready(function() {
+		   
+			$(".menu2").hover(function() {
+			
+				alert("hola");
+				
+		        });     
+		});	
+			
+			
 		</script>
 
 </body>
