--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 		   .menu3{
 		  	background-image: url("image/XXXX.jpg");  
 		    }
+		
+		    .navbarback {
+			    background-image: url("image/ringoffire.jpg");
+		    }
 		  
 	</style>
  
@@ -64,8 +68,8 @@
 <body>    
 	
 	<nav class="navbar">
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Doritos Souls</a>
+		    <div class="nav-wrapper" id="navbarback">
+		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
 			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
