--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>    
 	
 	<nav class="navbar">
-		    <div class="nav-wrapper" id="navbarback">
+		    <div class="nav-wrapper" backgorund-color: blue-grey darken-4;>
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
