--- a/index.html
+++ b/index.html
@@ -56,10 +56,6 @@
 		   .menu3{
 		  	background-image: url("image/XXXX.jpg");  
 		    }
-		
-		    .navbarback {
-			    background-image: url("image/ringoffire.jpg");
-		    }
 		  
 	</style>
  
@@ -67,8 +63,8 @@
 
 <body>    
 	
-	<nav class="navbar">
-		    <div class="nav-wrapper" backgorund-color: blue-grey darken-4;>
+	<nav class="navbar" background-color:#000000;>
+		    <div class="nav-wrapper">
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
