--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>    
 	
-	<nav class="navbar" background-color:#000000;>
+	<nav class="blue-grey darken-4">
 		    <div class="nav-wrapper">
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
