--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>    
 	
-	<nav class="(image/ringoffire.jpg)">
+	<nav class=background-image: url("image/ringoffire.jpg")>
 		    <div class="nav-wrapper">
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
