--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	
 	<nav class="nav-wrapper blue-grey darken-3">
 		    <div class="nav-wrapper">
-		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
+		      <a href="https://jolivera73.github.io/doritos-souls"><i class="image/Lothric_Knight_Helm.png">Helmet</i>Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
 			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
