--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 </head>
 
 <body>    
-	<!-- image/Lothric_Knight_Helm.png -->
-	<nav class="nav-wrapper blue-grey darken-3">
+	<nav class="blue-grey darken-3">
 		    <div class="nav-wrapper">
-		      <a href="https://jolivera73.github.io/doritos-souls"><i class="material-icons">cloud</i>Doritos Souls</a>
+		      <a href="https://jolivera73.github.io/doritos-souls"><i class="image/Lothric_Knight_Helm.png">Helmet</i>Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
 			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
