--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 		   .menu3{
 		  	background-image: url("image/XXXX.jpg");  
 		    }
+		   .menu4{
+			background-image: url("image/XXXX.jpg");  
+		    }
+	       	   .menu5{
+			background-image: url("image/XXXX.jpg");  
+		    }
 		  
 	</style>
  
@@ -64,7 +70,7 @@
 <body>    
 	<nav class="blue-grey darken-3">
 		    <div class="nav-wrapper">
-		      <a href="https://jolivera73.github.io/doritos-souls"><i class="image/Lothric_Knight_Helm.png">Helmet</i>Doritos Souls</a>
+		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
 			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
