--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 		  	background-image: url("image/ringedcity.jpg");  
 		    }
 		   .menu3{
-		  	background-image: url("image/XXXX.jpg");  
+		  	background-image: url("image/knight.jpg");  
 		    }
 		   .menu4{
-			background-image: url("image/XXXX.jpg");  
+			background-image: url("image/ringedcity.jpg");  
 		    }
 	       	   .menu5{
-			background-image: url("image/XXXX.jpg");  
+			background-image: url("image/knight.jpg");  
 		    }
 		  
 	</style>
@@ -75,8 +75,8 @@
 			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
 			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
 			<li id="item3" class="item"><a href="dark_souls_ii.html"> Dark Souls II </a></li>
-		        <li id="item3" class="item"><a href="dark_souls_iii.html"> Dark Souls III </a></li>
-			<li id="item3" class="item"><a href="bloodborne.html"> Bloodborne</a></li>
+		        <li id="item4" class="item"><a href="dark_souls_iii.html"> Dark Souls III </a></li>
+			<li id="item5" class="item"><a href="bloodborne.html"> Bloodborne</a></li>
 		      </ul>
 		    </div>
 		  </nav>
@@ -101,6 +101,8 @@
 				if ( damunt == 'item1' ) { $(this).addClass("menu1"); } ;
 				if ( damunt == 'item2' ) { $(this).addClass("menu2"); } ;
 				if ( damunt == 'item3' ) { $(this).addClass("menu3"); } ;
+				if ( damunt == 'item4' ) { $(this).addClass("menu4"); } ;
+				if ( damunt == 'item5' ) { $(this).addClass("menu5"); } ;
 				
 		        });   
 			
@@ -113,6 +115,8 @@
 				if ( damunt == 'item1' ) { $(this).removeClass("menu1"); } ;
 				if ( damunt == 'item2' ) { $(this).removeClass("menu2"); } ;
 				if ( damunt == 'item3' ) { $(this).removeClass("menu3"); } ;
+				if ( damunt == 'item4' ) { $(this).removeClass("menu4"); } ;
+				if ( damunt == 'item5' ) { $(this).removeClass("menu5"); } ;
 		        });   
 		});	
 			
