--- a/index.html
+++ b/index.html
@@ -188,25 +188,23 @@
 			  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 			  <span class="sr-only">Next</span>
 			</a>
+			
+			<!--Texto -->
 		</div>
-		
-		
-		<!-- cos pàgina -->
+		         
+			<div class="row">
+			<h1 class="col-md-12 green accent-2">Títol</h1>
+			
+		</div>
+	
+		<!-- final pàgina -->
 		<div class="container-fluid bg-25 text-center">
 			<ul class="list-inline">
 			<li><strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong></li>
 			<li><u>Santuario de enlace de fuego nº83 1r 2nd</u></li>
 				<li><u>Lordran</u></li>
 		  </ul>
-		</div>
-
-		<div class="row">
-			<h1 class="col-md-12 green accent-2">Títol</h1>
-			
-		</div>	
-	
-
-		  
+		</div>		  
 
 </body>
 
