--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			  opacity: 0.7;
 		   }	  
 		  .menu1{
-		  	background-image: url("image/knight.jpg");  
+		  	background-image: url("image/icona 250x150.png");  
 		    }
 		  .menu2{
-		  	background-image: url("image/ringedcity.jpg");  
+		  	background-image: url("image/icona 250x150.jpg");  
 		    }
 		   .menu3{
 		  	background-image: url("image/knight.jpg");  
