--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 			  opacity: 0.7;
 		   }	  
 		  .menu1{
-		  	background-image: url("image/icona 250x150.png");  
+		  	background-image: url("image/icona 250x150.png"); 
+			height : 125;
+			width : 100;
 		    }
 		  .menu2{
 		  	background-image: url("image/icona 250x150.jpg");  
