--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 		    }
 		  .menu2{
 		  	background-image: url("image/icona 250x150.jpg");  
+			height : 40;
+			width : 30;
 		    }
 		   .menu3{
 		  	background-image: url("image/knight.jpg");  
