--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			width : 30;
 		    }
 		   .menu3{
-		  	background-image: url("image/knight.jpg");  
+		  	background-image: url("image/icona 60x40.jpg");  
 		    }
 		   .menu4{
 			background-image: url("image/ringedcity.jpg");  
