--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 
 <body>    
-	<nav class="blue-grey darken-3">
+	<nav class="blue-grey darken-3" style="background-image: url("image/ringoffire.jpg") " >
 		    <div class="nav-wrapper">
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
