--- a/bloodborne.html
+++ b/bloodborne.html
@@ -114,7 +114,7 @@
 			
 				var damunt = $(this).attr('id') ;
 				
-				//alert("estas damunt de : " +  damunt );
+				alert("estas damunt de : " +  damunt );
 				
 				if ( damunt == 'item1' ) { $(this).removeClass("menu1"); } ;
 				if ( damunt == 'item2' ) { $(this).removeClass("menu2"); } ;
