--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
 	       	   .menu5{
 			background-image: url("image/knight.jpg");  
 		    }
+		
+			.nav_imatge{
+				background-image: url("image/ringoffire.jpg");  
+			    }
 		  
 	</style>
  
 </head>
 
 <body>    
-	<nav class="blue-grey darken-3" style="background-image: url("image/ringoffire.jpg") " >
+	<nav class="blue-grey darken-3 nav_imatge" >
 		    <div class="nav-wrapper">
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
