--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			background-image: url("image/ringedcity.jpg");  
 		    }
 	       	   .menu5{
-			background-image: url("image/knight.jpg");  
+			background-image: url("image/clericbeast.gif");  
 		    }
 		
 			.nav_imatge{
