--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		  	background-image: url("image/knight.jpg");  
 		    }
 		   .menu4{
-			background-image: url("image/ringedcity.jpg");  
+			background-image: url("image/lothric_wall.gif");  
 		    }
 	       	   .menu5{
 			background-image: url("image/clericbeast.gif");  
