--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		  	background-image: url("image/ringedcity.jpg");  
 		    }
 		   .menu3{
-		  	background-image: url("image/knight.jpg");  
+		  	background-image: url("image/mirrorboss.gif");  
 		    }
 		   .menu4{
 			background-image: url("image/lothric_wall.gif");  
@@ -167,7 +167,7 @@
 			  </div>
 
 			  <div class="item">
-				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
+				<img src="image/caballerocebolla.gif" alt="Quien soy" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Quien soy?</h3>
 				  <p>Soy un jugador, al igual que tú.</p>
