--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			  opacity: 0.7;
 		   }	  
 		  .menu1{
-		  	background-image: url("image/knight.jpg");  
+		  	background-image: url("image/shieldboss.gif");  
 		    }
 		  .menu2{
 		  	background-image: url("image/ringedcity.jpg");  
