--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			  opacity: 0.7;
 		   }	  
 		  .menu1{
-		  	background-image: url("image/shieldboss.gif");  
+		  	background-image: url("image/angel.jpg");  
 		    }
 		  .menu2{
 		  	background-image: url("image/velsdatboss.gif");  
@@ -63,10 +63,10 @@
 			background-image: url("image/clericbeast.gif");  
 		    }
 		
-			.nav_imatge{
-				background-image: url("image/ringoffire.jpg");  
-			    }
-		  
+		    .nav_imatge{
+			background-image: url("image/ringoffire.jpg");  
+		    }
+
 	</style>
  
 </head>
