--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			  opacity: 0.7;
 		   }	  
 		  .menu1{
-		  	background-image: url("image/angel.jpg");  
+		  	background-image: url("image/shieldboss.gif");  
 		    }
 		  .menu2{
-		  	background-image: url("image/velsdatboss.gif");  
+		  	background-image: url("image/angel.jpg");  
 		    }
 		   .menu3{
 		  	background-image: url("image/mirrorboss.gif");  
