--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		  	background-image: url("image/shieldboss.gif");  
 		    }
 		  .menu2{
-		  	background-image: url("image/angel.jpg");  
+		  	background-image: url("image/caballerocebolla.gif");  
 		    }
 		   .menu3{
 		  	background-image: url("image/mirrorboss.gif");  
