--- a/index.html
+++ b/index.html
@@ -48,19 +48,29 @@
 			  opacity: 0.7;
 		   }	  
 		  .menu1{
-		  	background-image: url("image/shieldboss.gif");  
+		  	background-image: url("image/shieldboss.gif");
+			  opacity: 0.3;
+	 		  transparency: 0.3;
 		    }
 		  .menu2{
 		  	background-image: url("image/caballerocebolla.gif");  
+			  opacity: 0.7;
+			  transparency: 0.7;
 		    }
 		   .menu3{
 		  	background-image: url("image/mirrorboss.gif");  
+			  opacity: 0.4;
+			  transparency: 0.4;
 		    }
 		   .menu4{
-			background-image: url("image/lothric_wall.gif");  
-		    }
+			background-image: url("image/lothric_wall.gif");
+			  opacity: 0.5;
+			  transparency: 0.5;
+		   }
 	       	   .menu5{
-			background-image: url("image/clericbeast.gif");  
+			background-image: url("image/clericbeast.gif");
+			  opacity: 0.1;
+			  transparency: 0.1;
 		    }
 		
 		    .nav_imatge{
