--- a/index.html
+++ b/index.html
@@ -46,31 +46,24 @@
 			background-color: #403E26; /* Color */
 			color: #ffffff;
 			  opacity: 0.7;
-		   }	  
+		   }
+	          h3{
+			  text-shadow: 2px 2px 2px yellow;
+		   }
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
-			  opacity: 0.3;
-	 		  transparency: 0.3;
 		    }
 		  .menu2{
 		  	background-image: url("image/caballerocebolla.gif");  
-			  opacity: 0.7;
-			  transparency: 0.7;
 		    }
 		   .menu3{
 		  	background-image: url("image/mirrorboss.gif");  
-			  opacity: 0.4;
-			  transparency: 0.4;
 		    }
 		   .menu4{
 			background-image: url("image/lothric_wall.gif");
-			  opacity: 0.5;
-			  transparency: 0.5;
 		   }
 	       	   .menu5{
 			background-image: url("image/clericbeast.gif");
-			  opacity: 0.1;
-			  transparency: 0.1;
 		    }
 		
 		    .nav_imatge{
