--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			  </div>
 
 			  <div class="item">
-				<img src="image/caballerocebolla.gif" alt="Quien soy" width="1600" height="500">
+				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Quien soy?</h3>
 				  <p>Soy un jugador, al igual que tú.</p>
