--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		   }
 	          h3{
 			  text-shadow: 2px 2px 2px yellow;
+			  font: 100% fantasy;
 		   }
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
