--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		   }
 	          h3{
 			  text-shadow: 2px 2px 2px yellow;
-			  font: 100% fantasy;
+			  font-family: fantasy;
+			  text-align:center;
 		   }
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
