--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		   }
 	          h3{
 			  text-shadow: 2px 2px 2px yellow;
-			  font-family: fantasy;
+			  font-family: 500% fantasy;
 			  text-align:center;
 		   }
 		  .menu1{
