--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
 			  opacity: 0.7;
 		   }
 	          h3{
-			  text-shadow: 2px 2px 2px yellow;
-			  font-family: 500% fantasy;
-			  text-align:center;
+			text-shadow: 2px 2px 2px yellow;
+			font-family: 500% fantasy;
+			text-align:center;
+		   }
+		  h4{
+			text-shadow: 2px 2px 2px yellow;
+			font-family: 300% fantasy;
+			text-align:center;
 		   }
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
@@ -167,7 +172,7 @@
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Doritos Souls</h3>
-				  <p>Una guía de la saga Souls.</p>
+				  <h4>Una guía de la saga Souls.</h4>
 				</div>      
 			  </div>
 
@@ -175,7 +180,7 @@
 				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Quien soy?</h3>
-				  <p>Soy un jugador, al igual que tú.</p>
+				  <h4>Soy un jugador, al igual que tú.</h4>
 				</div>      
 			  </div>
 			
@@ -183,7 +188,7 @@
 				<img src="image/ringedcity.jpg" alt="Recuerda" width="1600" height="500">
 				<div class="carousel-caption">
 				  <h3>Recuerda que...</h3>
-				  <p>Esta página la he creado con el fin de entretenerme.</p>
+				  <h4>Esta página la he creado con el fin de entretenerme.</h4>
 				</div>      
 			  </div>
 			</div>
