--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			<div class="carousel-inner" role="listbox">
 			  <div class="item active">
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
-				<div class="carousel-caption">
+				<div class="carousel-caption" align="center">
 				  <h3>Doritos Souls</h3>
 				  <h4>Una guía de la saga Souls.</h4>
 				</div>      
@@ -178,7 +178,7 @@
 
 			  <div class="item">
 				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
-				<div class="carousel-caption">
+				<div class="carousel-caption" align="center">
 				  <h3>Quien soy?</h3>
 				  <h4>Soy un jugador, al igual que tú.</h4>
 				</div>      
@@ -186,7 +186,7 @@
 			
 			  <div class="item">
 				<img src="image/ringedcity.jpg" alt="Recuerda" width="1600" height="500">
-				<div class="carousel-caption">
+				<div class="carousel-caption" align="center">
 				  <h3>Recuerda que...</h3>
 				  <h4>Esta página la he creado con el fin de entretenerme.</h4>
 				</div>      
