--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			  <div class="item active">
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3 align="center">Doritos Souls</h3>
+				  <h3>Doritos Souls</h3>
 				  <h4>Una guía de la saga Souls.</h4>
 				</div>      
 			  </div>
@@ -179,7 +179,7 @@
 			  <div class="item">
 				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3 align="center">Quien soy?</h3>
+				  <h3>Quien soy?</h3>
 				  <h4>Soy un jugador, al igual que tú.</h4>
 				</div>      
 			  </div>
@@ -187,7 +187,7 @@
 			  <div class="item">
 				<img src="image/ringedcity.jpg" alt="Recuerda" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3 align="center">Recuerda que...</h3>
+				  <h3>Recuerda que...</h3>
 				  <h4>Esta página la he creado con el fin de entretenerme.</h4>
 				</div>      
 			  </div>
