--- a/index.html
+++ b/index.html
@@ -29,7 +29,29 @@
     <script src="js/materialize.js"></script>	
 	
 	<style>
-		  .container {
+		.carousel{
+   display:table;
+   width:100%;
+}
+.carousel-content {
+    color:black;
+    position:relative;
+	width:inherit;
+	text-align:center;  
+    height:200px;
+    display:block;
+}
+
+.carousel-content div{
+   margin-top:50%;
+   transform:translateY(-50%);
+   
+}
+.carousel-content h3{
+  margin-top: 0;
+}
+		
+		.container {
 			  padding: 80px 120px;
 		  }
 		  .person {
