--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 			<div class="carousel-inner" role="listbox">
 			  <div class="item active">
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
-				<div class="carousel-content">
+				<div class="carousel-caption">
 				  <h3>Doritos Souls XXX</h3>
 				  <h4>Una guía de la saga Souls.</h4>
 				</div>      
