--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			  <div class="item active">
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3>Doritos Souls XXX</h3>
+				  <h3>Doritos Souls</h3>
 				  <h4>Una guía de la saga Souls.</h4>
 				</div>      
 			  </div>
