--- a/index.html
+++ b/index.html
@@ -29,27 +29,28 @@
     <script src="js/materialize.js"></script>	
 	
 	<style>
+		<!--carousel-->
 		.carousel{
-   display:table;
-   width:100%;
-}
-.carousel-content {
-    color:black;
-    position:relative;
-	width:inherit;
-	text-align:center;  
-    height:200px;
-    display:block;
-}
+		   display:table;
+		   width:100%;
+		}
+		.carousel-content {
+		    color:black;
+		    position:relative;
+			width:inherit;
+			text-align:center;  
+		    height:200px;
+		    display:block;
+		}
 
-.carousel-content div{
-   margin-top:50%;
-   transform:translateY(-50%);
-   
-}
-.carousel-content h3{
-  margin-top: 0;
-}
+		.carousel-content div{
+		   margin-top:50%;
+		   transform:translateY(-50%);
+
+		}
+		.carousel-content h3{
+		  margin-top: 0;
+		}
 		
 		.container {
 			  padding: 80px 120px;
@@ -69,16 +70,19 @@
 			color: #ffffff;
 			  opacity: 0.7;
 		   }
+		<!--letra-->
 	          h3{
-			text-shadow: 2px 2px 2px yellow;
+			text-shadow: 2px 2px 2px cyan accent-4;
 			font-family: 500% fantasy;
 			text-align:center;
 		   }
 		  h4{
-			text-shadow: 2px 2px 2px yellow;
+			text-shadow: 2px 2px 2px cyan accent-4;
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
+		
+		<!--Menus-->
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
 		    }
