--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
-		
+		li{
+		    text-shadow: 2px 2px 2px red accent-4;
+			font-family: 300% fantasy;
+			text-align:center;	
+		   }
 		<!--Menus-->
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
