--- a/index.html
+++ b/index.html
@@ -72,19 +72,18 @@
 		   }
 		<!--letra-->
 	          h3{
-			text-shadow: 2px 2px 2px cyan accent-4;
+			text-shadow: 2px 2px 2px lime darken-4;
 			font-family: 500% fantasy;
 			text-align:center;
 		   }
 		  h4{
-			text-shadow: 2px 2px 2px cyan accent-4;
+			text-shadow: 2px 2px 2px lime darken-4;
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
 		li{
 		    text-shadow: 2px 2px 2px red accent-4;
-			font-family: 300% fantasy;
-			text-align:center;	
+			font-family: 300% fantasy;	
 		   }
 		<!--Menus-->
 		  .menu1{
