--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 		   }
 		<!--letra-->
 	          h3{
-			text-shadow: 2px 2px 2px lime darken-4;
+			text-shadow: 2px 2px 2px red;
 			font-family: 500% fantasy;
 			text-align:center;
 		   }
 		  h4{
-			text-shadow: 2px 2px 2px lime darken-4;
+			text-shadow: 2px 2px 2px lime;
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
