--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Doritos Souls</title>
-
+	
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
@@ -29,6 +29,7 @@
     <script src="js/materialize.js"></script>	
 	
 	<style>
+		/*
 		<!--carousel-->
 		.carousel{
 		   display:table;
@@ -48,7 +49,7 @@
 		   transform:translateY(-50%);
 
 		}
-		.carousel-content h5{
+		.carousel-content h3{
 		  margin-top: 0;
 		}
 		
@@ -66,11 +67,13 @@
 			  border-color: #f1f1f1;
 		  }
 		  .bg-25 { 
-			background-color: #403E26; /* Color */
+			background-color: #403E26; <!--Color-->
 			color: #ffffff;
 			  opacity: 0.7;
 		   }
-		<!--letra-->
+		*/
+		
+		/*letra*/
 	          h3{
 			text-shadow: 2px 2px 2px yellow;
 			font-family: 500% fantasy;
@@ -81,7 +84,8 @@
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
-		<!--Menus-->
+		
+		/*Menus*/
 		  .menu1{
 		  	background-image: url("image/shieldboss.gif");
 		    }
@@ -228,7 +232,7 @@
 			  <span class="sr-only">Next</span>
 			</a>
 			
-			<!-- final pàgina -->
+			<!-- final página -->
 		<div class="container-fluid bg-25 text-center">
 			<ul class="list-inline">
 			<li><strong>Creada por <a href="yutora07@gmail.com">Yû Tora</a>.</strong></li>
