--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		
 		/*letra*/
 	          h3{
-			text-shadow: 2px 2px 2px brown;
+			text-shadow: 2px 2px 2px yellow;
 			font-family: 500% fantasy;
 			text-align:center;
 		   }
