--- a/index.html
+++ b/index.html
@@ -77,12 +77,17 @@
 	          h3{
 			text-shadow: 2px 2px 2px yellow;
 			font-family: 500% fantasy;
-			text-align:initial;
+			text-align:center;
+			  height: 150px;
+			  width: 150px;
+			  
 		   }
 		  h4{
 			text-shadow: 2px 2px 2px yellow;
 			font-family: 300% fantasy;
-			text-align:initial;
+			text-align:center;
+			  height: 150px;
+			  width: 150px;
 		   }
 		
 		/*Menus*/
