--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 			font-family: 300% fantasy;
 			text-align:center;
 		   }
+		  a1{
+			text-shadow: 2px 2px 2px red;
+		   }
 		
 		/*Menus*/
 		  .menu1{
@@ -115,11 +118,11 @@
 		    <div class="nav-wrapper">
 		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-			<li id="item1" class="item"><a href="demon's_souls.html"> Demon Souls </a></li>
-			<li id="item2" class="item"><a href="dark_souls.html"> Dark Souls </a></li>
-			<li id="item3" class="item"><a href="dark_souls_ii.html"> Dark Souls II </a></li>
-		        <li id="item4" class="item"><a href="dark_souls_iii.html"> Dark Souls III </a></li>
-			<li id="item5" class="item"><a href="bloodborne.html"> Bloodborne </a></li>
+			<li id="item1" class="item"><a1 href="demon's_souls.html"> Demon Souls </a1></li>
+			<li id="item2" class="item"><a1 href="dark_souls.html"> Dark Souls </a1></li>
+			<li id="item3" class="item"><a1 href="dark_souls_ii.html"> Dark Souls II </a1></li>
+		        <li id="item4" class="item"><a1 href="dark_souls_iii.html"> Dark Souls III </a1></li>
+			<li id="item5" class="item"><a1 href="bloodborne.html"> Bloodborne </a1></li>
 		      </ul>
 		    </div>
 		  </nav>
