--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <body>    
 	<nav class="blue-grey darken-3 nav_imatge" >
 		    <div class="nav-wrapper">
-		      <a href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a>
+		      <a1 href="https://jolivera73.github.io/doritos-souls" class="brand-logo">Doritos Souls</a1>
 		      <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li id="item1" class="item"><a1 href="demon's_souls.html"> Demon Souls </a1></li>
 			<li id="item2" class="item"><a1 href="dark_souls.html"> Dark Souls </a1></li>
@@ -204,24 +204,21 @@
 			  <div class="item active">
 				<img src="image/ringedcity.jpg" alt="Doritos Souls" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3>Doritos Souls</h3>
-				  <h4>Una guía de la saga Souls.</h4>
+				  <h3>Esta Es Tu Guía: Doritos Souls</h3>
 				</div>      
 			  </div>
 
 			  <div class="item">
-				<img src="image/ringedcity.jpg" alt="Quien soy" width="1600" height="500">
+				<img src="image/ringedcity.jpg" alt="Guias" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3>Quien soy?</h3>
-				  <h4>Soy un jugador, al igual que tú.</h4>
+				  <h3>Nuevas Guías</h3>
 				</div>      
 			  </div>
 			
 			  <div class="item">
 				<img src="image/ringedcity.jpg" alt="Recuerda" width="1600" height="500">
 				<div class="carousel-caption">
-				  <h3>Recuerda que...</h3>
-				  <h4>Esta página la he creado con el fin de entretenerme.</h4>
+				  <h3>Mantenimiento</h3>
 				</div>      
 			  </div>
 			</div>
